[package]
name = "massa-auto-rebuy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
massa-models = { git = "https://github.com/massalabs/massa", package = "massa_models" }
massa-wallet = { git = "https://github.com/massalabs/massa", package = "massa_wallet" }
massa-signature = { git = "https://github.com/massalabs/massa", package = "massa_signature" }
anyhow = "1.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }
tokio = "1"
serde = "1.0.136"